Retail Lending-Production/src/objects/Approved_by_Banks__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Approved by Banks</relationshipLabel>
        <relationshipName>Approved_by_Banks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>Approved by Banks</relationshipLabel>
        <relationshipName>Approved_by_Banks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Requisition__c</fullName>
        <label>Requisition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Approved by Bank</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Approved by Banks  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approved by Banks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>